--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,22 @@
-name: mirror to repo
-
-on: 
+name: Append File
+on:
   schedule:
-  - cron: '*/20 * * * *'
-
-# Ensures that only one mirror task will run at a time.
-concurrency:
-  group: mirror-git-repo
-
+    - cron: "*/20 * * * *" # run every 20 minutes
 jobs:
-  auto-commit:
+  append-file:
     runs-on: ubuntu-latest
     steps:
-      - uses: ThamognyaKodi/auto-commit@0.0.1 
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          EMAIL: ${{ github.event.pusher.email }}
-          NAME: ${{ github.event.pusher.name }}
-          BRANCH_ON_SOURCE_REPO: "master"
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: causeRailwayRedeployAction.txt
+        uses: juliangruber/write-file-action@v1.0.0
         with:
-          source-repo: "git@_some_provider_:_user_name_/_repo_name_.git"  
+          path: ./causeRailwayRedeployAction.txt # specify your file path here
+          content: "." # specify your content here
+          write-mode: append # specify your write mode here
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v7.2.1 # You can change this to another action if you prefer
+        with:
+          author_name: Isam Boubcher # specify your name here
+          author_email: your.email@example.com # specify your email here
+          message: "Causing a redeploy" # specify your commit message here
