--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Append A to file every 20 minutes
 
 on:
   schedule:
-    - cron: "*/1 * * * *"
+    - cron: "*/20 * * * *"
+  workflow_dispatch:  # <-- manual trigger
 
 jobs:
   append-a:
@@ -12,14 +13,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Append A
-        run: echo "a" >> file.txt
-      - name: config 1
-        run: git config --global user.name 'Issam Boubcher'
-      - name: config 2
-        run: git config --global user.email 'boubche.issam@gmail.com'
-      - name: add file to commit
-        run: git add file.txt
-      - name: commit
-        run: git commit -m "Append 'a' to file.txt"
-      - name: push
-        run: git commit -m "Append 'a' to file.txt"
+        run: |
+          echo "a" >> file.txt
+          git config --global user.name 'Your Name'
+          git config --global user.email 'your-email@example.com'
+          git add file.txt
+          git commit -m "Append 'a' to file.txt"
+          git push
