--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Append A to file every 20 minutes
 
 on:
   schedule:
-    - cron: "*/1 * * * *"
+    - cron: '*/5 * * * *'
   workflow_dispatch:  # <-- manual trigger
 
 jobs:
