--- a/.github/workflows/append.yml
+++ b/.github/workflows/append.yml
@@ -1,4 +1,4 @@
-name: Append A to file every 30 minutes
+name: Append 'a' to `file.txt` every 30 minutes
 # The goal of this workflow is to cause a commit to happen to the repo every 30 minutes.
 # This is done to cause Railway to detect a new commit, and proceed to pull and redeploy the project.
 # The project is redeployed every ~30 minutes because I noticed it kept eating more memory as time went by.
@@ -16,11 +16,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Append A
+      - name: Append 'a'
         run: |
           echo "a" >> file.txt
           git config --global user.name 'Auto-Workflow'
           git config --global user.email 'autoWorkflow@gmail.com'
           git add file.txt
-          git commit -m "Append 'a' to file.txt"
+          git commit -m "Append 'a' to `file.txt`"
           git push
